--- a/TreasureTrail 2/app/src/main/res/layout/fragment_plus_one.xml
+++ b/TreasureTrail 2/app/src/main/res/layout/fragment_plus_one.xml
@@ -1,6 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context=".PlusOneFragment">
+    android:layout_height="match_parent" tools:context=".PlusOneFragment"
+    android:id="@+id/section1">
 
     <com.google.android.gms.plus.PlusOneButton
         xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
