--- a/TreasureTrail 2/app/src/main/res/layout/leaderboardfragment.xml
+++ b/TreasureTrail 2/app/src/main/res/layout/leaderboardfragment.xml
@@ -1,26 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:gravity="center"
-android:background="@drawable/rowshadow"
-android:id="@+id/leaderboardid">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:layout_margin="15dp"
-    android:padding="15dp"
-    android:background="@drawable/layer_card_background"
-    android:text="Hello Card!\nThis is an example of a card..."/>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context=".MainActivity$PlaceholderFragment"
+        android:id = "@+id/container" >
+
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:id="@+id/bg"
+            android:background="@drawable/bg"
+            android:layout_above="@+id/video"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:id="@+id/petsmall1"
+        android:background="@drawable/pet1"
+        android:layout_above="@+id/bg"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:id="@+id/petsmall2"
+        android:background="@drawable/pet2"
+        android:layout_above="@+id/bg"
+        android:layout_toRightOf="@+id/pet1"
+        android:layout_toEndOf="@+id/pet1" />
+        <ImageView
+            android:layout_width="1000dp"
+            android:layout_height="48dp"
+            android:id="@+id/video"
+            android:background="@drawable/video"
+            android:layout_above="@+id/pet1" />
+
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:id="@+id/pet1"
+            android:background="@drawable/pet1"
+            android:layout_above="@+id/pet2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/badge1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/pet1"
+        android:layout_alignRight="@id/pet1"
+        android:text="10"
+        android:textColor="#FFF"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:background="@drawable/badge_circle"/>
+
+
+
+
     <ImageView
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:id="@+id/pet1"
-        android:background="@drawable/pet1"
-        android:layout_below="@+id/video"
+        android:id="@+id/pet2"
+        android:background="@drawable/pet2"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        />
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/badge2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/pet2"
+        android:layout_alignRight="@id/pet2"
+        android:text="10"
+        android:textColor="#FFF"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:background="@drawable/badge_circle"/>
 </RelativeLayout>
+
