--- a/TreasureTrail 2/app/src/main/res/layout/activityfragment.xml
+++ b/TreasureTrail 2/app/src/main/res/layout/activityfragment.xml
@@ -3,7 +3,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"  >
+    android:layout_height="match_parent"
+    android:id="@+id/coinsTeam">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,30 +37,29 @@
 
 
         </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <!-- coins, teammates-->
 
-
-        </RelativeLayout>
 
         </LinearLayout>
+    
 
-    <LinearLayout android:orientation="vertical"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout">
-
-    </LinearLayout>
-
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="22nd April"
+        android:layout_above="@+id/activity1"
+        android:layout_alignRight="@+id/pet1"
+        android:layout_alignEnd="@+id/pet1"
+        android:id="@+id/textView2" />
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:background="@drawable/rowshadow"
-        android:id="@+id/leaderboardid"
+        android:id="@+id/activity1"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
@@ -73,10 +73,42 @@
             android:background="@drawable/layer_card_background"
             android:text="Mom Anne\n4534 steps"
             android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="72dp"
-            android:layout_marginEnd="72dp" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="22nd April"
+        android:id="@+id/textView3"
+        android:layout_below="@+id/activity1"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignStart="@+id/textView2" />
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:background="@drawable/rowshadow"
+        android:id="@+id/leaderboardid"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="15dp"
+            android:background="@drawable/layer_card_background"
+            android:text="Mom Anne\n4534 steps"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
     <ImageView
