--- a/TreasureTrail 2/app/src/main/res/layout/profilefragment.xml
+++ b/TreasureTrail 2/app/src/main/res/layout/profilefragment.xml
@@ -43,21 +43,17 @@
                 android:padding="15dp"
                 android:background="@drawable/layer_card_background"
                 android:text="Mom Anne\n4534 steps"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginRight="72dp"
-                android:layout_marginEnd="72dp" />
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/pet1"
+                android:layout_toEndOf="@+id/pet1" />
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:id="@+id/pet1"
                 android:background="@drawable/pet1"
-                android:layout_marginLeft="64dp"
-                android:layout_marginStart="64dp"
-                android:layout_centerVertical="true"
+                android:layout_below="@+id/video"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                />
         </RelativeLayout>
         <RelativeLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -75,8 +71,9 @@
                 android:padding="15dp"
                 android:background="@drawable/layer_card_background"
                 android:text="Piggy Peter\n3000 steps"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/pet2"
+                android:layout_toEndOf="@+id/pet2" />
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
