--- a/TreasureTrail 2/app/src/main/res/layout/leaderboardfragment.xml
+++ b/TreasureTrail 2/app/src/main/res/layout/leaderboardfragment.xml
@@ -17,7 +17,7 @@
             android:layout_height="350dp"
             android:id="@+id/bg"
             android:background="@drawable/bg"
-            android:layout_above="@+id/video"
+            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
     <ImageView
@@ -25,43 +25,39 @@
         android:layout_height="20dp"
         android:id="@+id/petsmall1"
         android:background="@drawable/pet1"
-        android:layout_above="@+id/bg"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_marginRight="67dp"
+        android:layout_marginEnd="67dp"
+        android:layout_below="@+id/bg"
+        android:layout_alignRight="@+id/bg"
+        android:layout_alignEnd="@+id/bg" />
     <ImageView
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:id="@+id/petsmall2"
         android:background="@drawable/pet2"
-        android:layout_above="@+id/bg"
-        android:layout_toRightOf="@+id/pet1"
-        android:layout_toEndOf="@+id/pet1" />
-        <ImageView
-            android:layout_width="1000dp"
-            android:layout_height="48dp"
-            android:id="@+id/video"
-            android:background="@drawable/video"
-            android:layout_above="@+id/pet1" />
+        android:layout_alignTop="@+id/petsmall1"
+        android:layout_centerHorizontal="true" />
 
-        <ImageView
+    <ImageView
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:id="@+id/pet1"
             android:background="@drawable/pet1"
-            android:layout_above="@+id/pet2"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+        android:layout_alignTop="@+id/pet2"
+        android:layout_alignRight="@+id/badge1"
+        android:layout_alignEnd="@+id/badge1" />
     <TextView
         android:id="@+id/badge1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/pet1"
-        android:layout_alignRight="@id/pet1"
         android:text="10"
         android:textColor="#FFF"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:background="@drawable/badge_circle"/>
+        android:background="@drawable/badge_circle"
+        android:layout_alignTop="@+id/pet1"
+        android:layout_toLeftOf="@+id/petsmall1"
+        android:layout_toStartOf="@+id/petsmall1" />
 
 
 
@@ -71,20 +67,24 @@
         android:layout_height="48dp"
         android:id="@+id/pet2"
         android:background="@drawable/pet2"
+        android:layout_marginBottom="57dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toLeftOf="@+id/petsmall2"
+        android:layout_toStartOf="@+id/petsmall2"
+        android:layout_marginRight="57dp"
+        android:layout_marginEnd="57dp" />
 
     <TextView
         android:id="@+id/badge2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/pet2"
-        android:layout_alignRight="@id/pet2"
         android:text="10"
         android:textColor="#FFF"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:background="@drawable/badge_circle"/>
+        android:background="@drawable/badge_circle"
+        android:layout_alignRight="@+id/pet2"
+        android:layout_alignEnd="@+id/pet2"
+        android:layout_alignTop="@+id/pet2" />
 </RelativeLayout>
 
