--- a/TreasureTrail 2/app/src/main/res/layout/activity_main.xml
+++ b/TreasureTrail 2/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
+
     <!-- The first child in the layout is for the main Activity UI-->
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -45,8 +46,19 @@
             android:textSize="16sp"
             android:textColor="#111" />
 
-
     </RelativeLayout>
+    <TextView android:id="@+id/count"
+        android:textSize="20dp"
+        android:textColor="@android:color/darker_gray"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView android:id="@+id/log_data_text_view"
+        android:layout_below="@+id/count"
+        android:textSize="20dp"
+        android:textColor="@android:color/darker_gray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <!-- The navigation drawer -->
     <ListView
