--- a/TreasureTrail 2/app/src/main/res/layout/leaderboardfragment.xml
+++ b/TreasureTrail 2/app/src/main/res/layout/leaderboardfragment.xml
@@ -4,22 +4,17 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context=".MainActivity$PlaceholderFragment"
         android:id = "@+id/container" >
 
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:id="@+id/bg"
-            android:background="@drawable/bg"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:id="@+id/mapitaly"
+        android:background="@drawable/mapitaly"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
     <ImageView
         android:layout_width="20dp"
         android:layout_height="20dp"
@@ -27,9 +22,15 @@
         android:background="@drawable/pet1"
         android:layout_marginRight="67dp"
         android:layout_marginEnd="67dp"
-        android:layout_below="@+id/bg"
-        android:layout_alignRight="@+id/bg"
-        android:layout_alignEnd="@+id/bg" />
+        android:layout_below="@+id/mapitaly"
+        android:layout_alignRight="@+id/mapitaly"
+        android:layout_alignEnd="@+id/mapitaly" />
+
+    <edu.berkeley.mims.treasuretrail.AnimationView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
     <ImageView
         android:layout_width="20dp"
         android:layout_height="20dp"
@@ -59,9 +60,6 @@
         android:layout_toLeftOf="@+id/petsmall1"
         android:layout_toStartOf="@+id/petsmall1" />
 
-
-
-
     <ImageView
         android:layout_width="48dp"
         android:layout_height="48dp"
@@ -86,5 +84,7 @@
         android:layout_alignRight="@+id/pet2"
         android:layout_alignEnd="@+id/pet2"
         android:layout_alignTop="@+id/pet2" />
+
+
 </RelativeLayout>
 
