--- a/TreasureTrail 2/app/src/main/res/drawable/badge_circle.xml
+++ b/TreasureTrail 2/app/src/main/res/drawable/badge_circle.xml
@@ -3,7 +3,7 @@
     <corners
         android:radius="10dip"/>
     <solid
-        android:color="#F00" />
+        android:color="#FFD700" />
     <stroke
         android:width="2dip"
         android:color="#FFF" />
