--- a/TreasureTrail 2/app/src/main/res/layout/leaderboardfragment.xml
+++ b/TreasureTrail 2/app/src/main/res/layout/leaderboardfragment.xml
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10"
-        android:textColor="#FFF"
+        android:textColor="#000"
         android:textSize="16sp"
         android:textStyle="bold"
         android:background="@drawable/badge_circle"
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10"
-        android:textColor="#FFF"
+        android:textColor="#000"
         android:textSize="16sp"
         android:textStyle="bold"
         android:background="@drawable/badge_circle"
